# fuste

./: .ltex-ls-plus.json  CONTRIBUTING.md  Cargo.toml  README.md  flake.nix
.cargo/: config.toml
.githooks/lib-pre-commit/: unused-dependencies
.github/workflows/: nix-command.yml  run-toolchain-my-program.yml
fuste/env/alloc/: Cargo.toml
fuste/env/alloc/src/: allocator.rs  lib.rs  slab.rs
fuste/env/alloc/src/allocator/: gallocator.rs  notepad.rs
fuste/env/alloc/src/slab/: homo.rs
fuste/env/channel/: Cargo.toml
fuste/env/channel/src/: lib.rs  ops.rs  systems.rs
fuste/env/ecall/: Cargo.toml
fuste/env/ecall/src/: lib.rs
fuste/env/exit/: Cargo.toml
fuste/env/exit/src/: lib.rs
fuste/env/fuste/: Cargo.toml
fuste/env/fuste-proc-macro/: Cargo.toml
fuste/env/fuste-proc-macro/src/: lib.rs
fuste/env/fuste/src/: io.rs  lib.rs  prelude.rs
fuste/env/galloc/: Cargo.toml
fuste/env/galloc/src/: gallocator.rs  global.rs  lib.rs
fuste/env/systems/channel/serial-channel/: Cargo.toml
fuste/env/systems/channel/serial-channel/src/: lib.rs
fuste/env/systems/channel/signer-stores/: Cargo.toml
fuste/env/systems/channel/signer-stores/src/: base.rs  lib.rs  signer_index.rs  signer_load.rs  signer_store.rs
fuste/env/systems/channel/std-signer-stores/: Cargo.toml
fuste/env/systems/channel/std-signer-stores/src/: lib.rs  signer_index.rs  signer_load.rs  signer_store.rs
fuste/env/systems/channel/std-transaction/: Cargo.toml
fuste/env/systems/channel/std-transaction/src/: all.rs  id.rs  signer.rs
fuste/env/systems/channel/transaction/: Cargo.toml
fuste/env/systems/channel/transaction/src/: base.rs  id.rs  lib.rs  request.rs  response.rs  signer.rs
fuste/env/systems/channel/transaction/src/base/: id.rs  response.rs  signer.rs
fuste/env/systems/channel/transaction/src/base/signer/: index.rs
fuste/env/systems/write/std-output/: Cargo.toml
fuste/env/systems/write/std-output/src/: lib.rs
fuste/env/write/: Cargo.toml
fuste/env/write/src/: lib.rs
fuste/environment/channel/: Cargo.toml
fuste/environment/ecall/src/: lib.rs
fuste/environment/exit/: Cargo.toml
fuste/environment/exit/src/: lib.rs
fuste/environment/fuste/: Cargo.toml
fuste/environment/fuste/src/: io.rs  lib.rs
fuste/environment/write/: Cargo.toml
fuste/environment/write/src/: lib.rs
fuste/riscv-box/: Cargo.toml
fuste/riscv-box/src/: lib.rs  main.rs  run.rs
fuste/riscv-box/src/run/: elf.rs
fuste/riscv-core/: Cargo.toml
fuste/riscv-core/src/: instructions.rs  lib.rs  log.rs  machine.rs  plugins.rs
fuste/riscv-core/src/instructions/: rv32i.rs
fuste/riscv-core/src/instructions/rv32i/: base.rs
fuste/riscv-core/src/instructions/rv32i/base/: b.rs  i.rs  j.rs  r.rs  s.rs  u.rs
fuste/riscv-core/src/instructions/rv32i/base/b/: beq.rs  bge.rs  bgeu.rs  blt.rs  bltu.rs  bne.rs
fuste/riscv-core/src/instructions/rv32i/base/i/: addi.rs  andi.rs  ebreak.rs  ecall.rs  fence.rs  jalr.rs  lb.rs  lbu.rs  lh.rs  lhu.rs  lw.rs  ori.rs  slli.rs  slti.rs  sltiu.rs  srai.rs  srli.rs  xori.rs
fuste/riscv-core/src/instructions/rv32i/base/j/: jal.rs
fuste/riscv-core/src/instructions/rv32i/base/r/: add.rs  and.rs  or.rs  sll.rs  slt.rs  sltu.rs  sra.rs  srl.rs  sub.rs  xor.rs
fuste/riscv-core/src/instructions/rv32i/base/s/: sb.rs  sh.rs  sw.rs
fuste/riscv-core/src/instructions/rv32i/base/u/: auipc.rs  lui.rs
fuste/riscv-core/src/machine/: csrs.rs  memory.rs  registers.rs
fuste/riscv-core/src/machine/registers/: program_counter.rs
fuste/riscv-core/src/plugins/: rv32i_computer.rs
fuste/riscv-elf/: Cargo.toml
fuste/riscv-elf/src/: lib.rs
fuste/systems/channel/dlt/std-transaction/: Cargo.toml
fuste/systems/channel/dlt/std-transaction/src/: lib.rs  signer_stores.rs  transaction_metadata.rs
fuste/systems/channel/dlt/std-transaction/src/signer_stores/: base_signer.rs
fuste/systems/channel/std-transaction/: Cargo.toml
fuste/systems/channel/std-transaction/src/: containers.rs  lib.rs  signer_stores.rs  std_transaction.rs  transaction_metadata.rs
fuste/systems/channel/std-transaction/src/signer_stores/: store.rs
fuste/systems/channel/std-transaction/src/transaction_metadata/: transaction_signer_at_index.rs
fuste/systems/debug/lilbug/: Cargo.toml
fuste/systems/debug/lilbug/src/: exit.rs  lib.rs
fuste/systems/ecall/dispatcher/: Cargo.toml
fuste/systems/ecall/dispatcher/src/: lib.rs
fuste/systems/ecall/exit/: Cargo.toml
fuste/systems/ecall/exit/src/: lib.rs
fuste/systems/ecall/handler/: Cargo.toml
fuste/systems/ecall/handler/src/: lib.rs
fuste/systems/interrupt/handler/: Cargo.toml
fuste/systems/interrupt/handler/src/: lib.rs
fuste/systems/tick/handler/: Cargo.toml
fuste/systems/tick/handler/src/: lib.rs
fuste/systems/write/std-output/: Cargo.toml
fuste/systems/write/std-output/src/: lib.rs
fuste/tests/toolchain/: Cargo.toml  flake.nix  linker.lld  riscv32i-ramate-fuste-elf.json  rust-toolchain.toml
fuste/tests/toolchain/.cargo/: config.toml
fuste/tests/toolchain/my-fuste-dlt-program/: Cargo.toml
fuste/tests/toolchain/my-fuste-dlt-program/src/: main.rs
fuste/tests/toolchain/my-fuste-heap-program/: Cargo.toml
fuste/tests/toolchain/my-fuste-heap-program/src/: main.rs
fuste/tests/toolchain/my-fuste-program/: Cargo.toml
fuste/tests/toolchain/my-fuste-program/src/: main.rs
fuste/tests/toolchain/my-program/: Cargo.toml
fuste/tests/toolchain/my-program/src/: lib.rs  main.rs
fuste/tests/toolchain/my_program/: Cargo.toml
fuste/tests/toolchain/my_program/src/: main.rs
fuste/tests/toolchain/src/: main.rs
