[package]
name = "fuste-proc-macro"
version = { workspace = true }
edition = "2021"
license = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
publish = { workspace = true }
rust-version = { workspace = true }

[lib]
proc-macro = true

[dependencies]
syn = { workspace = true, features = ["full"] }
quote = { workspace = true }
proc-macro2 = { workspace = true }

[package.metadata.cargo-machete]
ignored = ["proc-macro2"]

[lints]
workspace = true