[workspace]

resolver = "2"

members = [
  
  "my_program",
  "my-fuste-program",

  "env/ecall",
  "env/exit",
  "env/write",
  "env/fuste"

]

[workspace.package]
version = "0.0.1"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["Ramate LLC"]
repository = "www.github.com/ramate/fuste"
homepage = "www.github.com/ramate/fuste"
publish = false
rust-version = "1.85.0"

[workspace.dependencies]
fuste-ecall = { path = "env/ecall" }
fuste-exit = { path = "env/exit" }
fuste-write = { path = "env/write" }
fuste = { path = "env/fuste" }

[workspace.lints.clippy]
debug_assert_with_mut_call = "deny"
inefficient_to_string = "deny"
map_flatten = "deny"
manual_ok_or = "deny"
doc_link_with_quotes = "deny"
match_same_arms = "deny"
semicolon_if_nothing_returned = "deny"
unwrap_used = "warn"
expect_used = "warn"

[profile.dev]
panic = "unwind"

[profile.release.build-override]
opt-level = 3

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
