[package]
name = "fuste-ecall-dispatcher"
version = { workspace = true }
edition = "2021"
license = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
publish = { workspace = true }
rust-version = { workspace = true }

[dependencies]
fuste-ecall = { workspace = true }
fuste-interrupt-handler = { workspace = true }
fuste-riscv-core = { workspace = true }

[lints]
workspace = true