[package]
name = "fuste-exit-system"
version = { workspace = true }
edition = "2021"
license = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
publish = { workspace = true }
rust-version = { workspace = true }

[dependencies]
fuste-exit = { workspace = true }
fuste-riscv-core = { workspace = true }
fuste-ecall-dispatcher = { workspace = true }

[lints]
workspace = true