[package]
name = "fuste-transaction"
version = { workspace = true }
edition = "2021"
license = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
publish = { workspace = true }
rust-version = { workspace = true }

[dependencies]
fuste-channel = { workspace = true }
fuste-serial-channel = { workspace = true }

[features]
system = []
default = ["system"]

[lints]
workspace = true