[package]
name = "fuste-std-transaction"
version = { workspace = true }
edition = "2021"
license = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
publish = { workspace = true }
rust-version = { workspace = true }

[dependencies]
fuste-riscv-core = { workspace = true }
fuste-std-output = { workspace = true }
fuste-ecall-dispatcher = { workspace = true }
fuste-transaction = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }

[lints]
workspace = true